Looks like there was a minor refactoring of TcpConnector property names. AC, could you please glimpse at TcpMessageReceiver? There's a TODO MERGE tag.
Merged revisions 7485-7512,7514-7524,7526-7537,7539-7543,7545 via svnmerge from 
https://svn.codehaus.org/mule/trunk/mule

........
  r7485 | aperepel | 2007-07-12 20:44:59 -0400 (Thu, 12 Jul 2007) | 1 line
  
  Cleanup and JavaDoc fixes
........
  r7486 | aperepel | 2007-07-12 21:17:57 -0400 (Thu, 12 Jul 2007) | 1 line
  
  MULE-2019 Nested Router blows when calling a service with more than one parameter. Reviewed and applied a patch by Roman Urosov.
........
  r7493 | aperepel | 2007-07-13 11:25:20 -0400 (Fri, 13 Jul 2007) | 3 lines
  
  Initialized merge tracking via "svnmerge" with revisions "1-7234" from 
  https://svn.codehaus.org/mule/branches/trunk-fix-for-MULE-1564
........
  r7495 | rossmason | 2007-07-13 23:24:00 -0400 (Fri, 13 Jul 2007) | 1 line
  
  Refactorings made to the Visualiser so that it can be called as a service (no functional changes). The main chnages being that it returns information about the artifacts it creates. Warning: I cannot test the Visualiser on OSX so would someone mind just running the tests for this... please :)
........
  r7496 | rossmason | 2007-07-13 23:26:24 -0400 (Fri, 13 Jul 2007) | 1 line
  
  Jms Clean up and refactoring. Beter support for local transactions (no polling). Still need to cache sessions. Removed lots of duplicate code. Added a separate descriptor service for XA transaction message receiver.
........
  r7497 | rossmason | 2007-07-13 23:28:09 -0400 (Fri, 13 Jul 2007) | 1 line
  
  fixed MULE-2001. Better handling of attachments since, nested attachments will also be read correctly. Still need to get Axis Attachments working correctly.
........
  r7498 | rossmason | 2007-07-13 23:28:29 -0400 (Fri, 13 Jul 2007) | 1 line
  
  Minor enhancement that will use the 'username' as the From address if the username is set and is an email address
........
  r7499 | rossma